Sun Dec 13 22:15:48 GMT 1998  Tony Gale  <gale@gtk.org>

	* docs/gtk_tut.sgml: Update the following sections to the
	  current API:
	    - Container Widgets
	    - CList Widget
	    - List Widget
	    - Tree Widget

Sat Dec 12 19:11:35 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkmenuitem.c: made GtkMenuItem::activate a GTK_RUN_ACTION signal.

	* gtk/gtkbutton.c: made GtkButton::clicked a GTK_RUN_ACTION signal.

	* gtk/gtkfeatures.h.in: define GTK_HAVE_FEATURES_1_1_8.

Sat Dec 12 17:46:55 1998  Owen Taylor  <otaylor@gtk.org>

	* gtk/gtklayout.c (gtk_layout_unrealize): Mark
	child->window as destroyed so we don't destroy
	it again.

Sat Dec 12 17:18:32 1998  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkfont.c (gdk_text_extents): Corrections
	to computation of extents of text from a font set.
	(from Chi-Deok Hwang <cdhwang@sr.hei.co.kr>)
         and Akira Higuchi <a-higuti@math.sci.hokudai.ac.jp>)
	
Fri Dec 11 08:59:12 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtklistitem.c (gtk_list_item_style_set):
	* gtk/gtklist.c     (gtk_list_style_set):
	Added "style_set" handlers.

Fri Dec 11 05:49:30 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkclist.c (gtk_clist_style_set): Add in a "style_set"
	handler so that the background of the clist changes
	with the theme.

Thu Dec 10 22:02:49 CST 1998 Shawn T. Amundson <amundson@gtk.org>

	* Released GTK+ 1.1.7

	* INSTALL:
	  NEWS:
	  README:
	  configure.in:
	  gtk+.spec:
	  gtk/gtkfeatures.h.in: 
	  docs/gtk-config.1: Version to 1.1.7

Thu Dec 10 20:48:19 PST 1998 Manish Singh <yosh@gimp.org>

	* gtk/gtkclist.c: avoid void pointer math

	* gtk/gtkhscale.c
	* gtk/gtkhscrollbar.c
	* gtk/gtkvscale.c
	* gtk/gtkvscrollbar.c: removed trailing , from enums

	* gtk/gtksignal.c: can't use enums as a bitfield type, use guint

	* gtk/testgtk.c: removed C++ comment added by owenpoo

Thu Dec 10 21:48:34 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkdnd.[ch]: Added gtk_drag_source_unset()
