@@ -1,3 +1,14 @@
+1998-12-13  Federico Mena Quintero  <federico@nuclecu.unam.mx>
+
+	* gtk/gtkwidget.h (struct _GtkWidgetClass): Added a "grab_focus"
+	signal for widgets.  When the signal is emitted, the widget will
+	grab the focus.  This is needed to let the user press an
+	accelerator key in a dialog box and have the corresponding widget
+	be focused.
+
+	* gtk/gtkwidget.c (gtk_widget_class_init): Create the "grab_focus"
+	signal.  The default handler is simply gtk_widget_grab_focus().
+
 Sun Dec 13 22:15:48 GMT 1998  Tony Gale  <gale@gtk.org>
 
 	* docs/gtk_tut.sgml: Update the following sections to the
